db refactor and dbgui add

--- a/.env.production
+++ b/.env.production
@@ -40,7 +40,7 @@ LOG_LEVEL=info
 
 # Server Configuration
 SERVER_PORT=8080
-GIN_MODE=release
+GIN_MODE=debug
 
 # Rate Limiting
 RATE_LIMIT_WINDOW=15m
