--- a/backend/config.template.json
+++ b/backend/config.template.json
@@ -2,7 +2,7 @@
   "server": {
     "port": "${SERVER_PORT:-8080}",
     "streamChunkSize": 50,
-    "ginMode": "${GIN_MODE:-release}"
+    "ginMode": "${GIN_MODE:-debug}"
   },
   "database": {
     "host": "${DATABASE_HOST}",
