--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "zod": "^3.25.57"
   },
   "devDependencies": {
+    "@lhci/cli": "^0.14.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/babel__core": "^7.20.5",
@@ -69,11 +70,11 @@
     "eslint-config-next": "15.3.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "lighthouse": "^12.2.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.2.3",
-    "typescript": "^5.8.3",
-    "lighthouse": "^12.2.0",
-    "@lhci/cli": "^0.14.0"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
