Fix Campaign Type vs Status confusion and WebSocket method mismatches
- Separate CampaignType (workflow phases) from CampaignStatus (execution state)
- Fix enum case mismatches throughout codebase (validated vs Validated)
- Extend WebSocket stub with missing methods (connectToCampaign, getConnectionStatus)
- Add Go-to-Zod schema generator with backend integration
- Add backend permissions endpoint and frontend integration
- Fix TypeScript compilation errors in campaign details page
- Update type definitions for proper campaign workflow handling
- Standardize WebSocket imports and interface compatibility
- Add comprehensive API analysis documentation

All TypeScript errors resolved, campaign workflow now properly typed.

--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "scripts": {
     "dev": "next dev --turbo -p 3000",
     "dev:stable": "next dev --turbo -p 3000",
-    "build": "next build",
-    "build:turbo": "next build --turbo",
+    "build": "npm run generate:schemas && next build",
+    "build:turbo": "npm run generate:schemas && next build --turbo",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "generate:schemas": "node scripts/generate-zod-schemas.js",
     "perf:audit": "node scripts/performance-audit.mjs",
     "perf:budget": "node scripts/performance-budget.mjs",
     "size-limit": "size-limit"
