--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.25.57"
+    "zod": "^3.25.57",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@lhci/cli": "^0.14.0",
