--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "generate:schemas": "node scripts/generate-zod-schemas.js",
     "perf:audit": "node scripts/performance-audit.mjs",
     "perf:budget": "node scripts/performance-budget.mjs",
-    "size-limit": "size-limit"
+    "size-limit": "size-limit",
+    "api:generate-spec": "cd backend && swag init -g cmd/apiserver/main.go --exclude internal/models/models.go -o docs && swagger2openapi docs/swagger.json -o docs/openapi.json",
+    "api:generate-client": "npx @openapitools/openapi-generator-cli generate --generator-key typescript-api",
+    "api:generate": "npm run api:generate-spec && npm run api:generate-client",
+    "api:validate": "scripts/validate-contracts.sh"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
@@ -43,6 +47,7 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack/react-query": "^5.66.0",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -60,6 +65,7 @@
   },
   "devDependencies": {
     "@lhci/cli": "^0.14.0",
+    "@openapitools/openapi-generator-cli": "^2.20.2",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/babel__core": "^7.20.5",
@@ -74,6 +80,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "lighthouse": "^12.2.0",
     "postcss": "^8",
+    "swagger2openapi": "^7.0.8",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.2.3",
     "ts-node": "^10.9.2",
