--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "zustand": "^5.0.5"
   },
   "devDependencies": {
+    "@eslint/js": "^9.29.0",
     "@lhci/cli": "^0.14.0",
     "@openapitools/openapi-generator-cli": "^2.20.2",
     "@testing-library/jest-dom": "^6.6.3",
@@ -97,6 +98,7 @@
     "@typescript-eslint/parser": "^7.0.0",
     "eslint": "9.28.0",
     "eslint-config-next": "15.3.3",
+    "globals": "^16.2.0",
     "husky": "^8.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -110,6 +112,7 @@
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "ts-prune": "^0.10.3",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.34.1"
   }
 }
