--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@typescript-eslint/parser": "^8.34.1",
     "eslint": "9.28.0",
     "eslint-config-next": "15.3.3",
+    "eslint-formatter-compact": "^8.40.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
