feat: complete CI/CD protection system activation
- Resolved all 146 TypeScript compilation errors systematically
- Fixed catch block parameter issues across 15+ files
- Removed unused @ts-expect-error directives from API client files
- Activated pre-commit hooks enforcing contract alignment validation
- Installed GitHub Actions workflows for type safety and contract protection
- Moved all documentation to docs/ directory with comprehensive cleanup
- Established schema snapshot protection and zero-warning ESLint policy
- Completed transition from remediation to protected state

All CI/CD protection mechanisms now active and enforcing contract drift prevention.

--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,22 @@ firebase-debug.log
 *.bak
 *.tmp
 
+# Contract sync temporary files
+extracted-contracts.json
+extracted-contracts.d.ts
+validation-report.json
+validation-report.md
+
+# Backup files
+*.backup
+*.md.backup
+
+# Legacy scripts
+convert_responses.py
+fix_auth_responses.sh
+fix_responses.py
+fix_userid_types.sh
+
 # Backend build artifacts
 backend/bin/
 backend/build/
