--- a/backend/.golangci.yml
+++ b/backend/.golangci.yml
@@ -6,15 +6,14 @@ run:
   timeout: 5m
   # Include test files or not, default is true
   tests: true
-  # Which dirs to skip: issues from them won't be reported
-  skip-dirs:
-    - vendor
-    - third_party
+  # Go version to target for analysis
+  go: "1.23"
 
 # Output configuration options
 output:
   # Format: colored-line-number|line-number|json|tab|checkstyle|code-climate, default is "colored-line-number"
-  format: colored-line-number
+  formats:
+    - format: colored-line-number
   # Print lines of code with issue, default is true
   print-issued-lines: true
   # Print linter name in the end of issue text, default is true
@@ -90,6 +89,10 @@ issues:
   max-issues-per-linter: 0
   # Maximum count of issues with the same text. Set to 0 to disable. Default is 3.
   max-same-issues: 0
+  # Directories to exclude from analysis
+  exclude-dirs:
+    - vendor
+    - third_party
   # Excluding configuration
   exclude-rules:
     # Exclude some linters from running on tests files.
